--- a/app/views/current/views/water/answers.html
+++ b/app/views/current/views/water/answers.html
@@ -417,18 +417,35 @@
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Irrigation systems
+          Current irrigation systems
         </dt>
         <dd class="govuk-summary-list__value">
           <ul class="govuk-list govuk-list--bullet">
-            {% for item in data['irrigation-systems'] %}
+            {% for item in data['irrigation-systems-current'] %}
               <li>{{ item | capitalize }}</li>
             {% endfor %}
           </ul>
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="irrigation-systems">
-            Change<span class="govuk-visually-hidden"> irrigation systems</span>
+            Change<span class="govuk-visually-hidden"> current irrigation systems</span>
+          </a>
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
+          Projected irrigation systems
+        </dt>
+        <dd class="govuk-summary-list__value">
+          <ul class="govuk-list govuk-list--bullet">
+            {% for item in data['irrigation-systems-target'] %}
+              <li>{{ item | capitalize }}</li>
+            {% endfor %}
+          </ul>
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="irrigation-systems">
+            Change<span class="govuk-visually-hidden"> projected irrigation systems</span>
           </a>
         </dd>
       </div>
