complete /farming-type

--- a/app/views/current/views/water/email.html
+++ b/app/views/current/views/water/email.html
@@ -31,7 +31,7 @@
               Farm grows crops for food
             </dt>
             <dd class="govuk-summary-list__value">
-              {{ data['farming-type'] | capitalize }}
+              {{ data['summary-farming-type'] | capitalize }}
             </dd>
           </div>
           <div class="govuk-summary-list__row">
