--- a/app/views/current/views/water/answers-high.html
+++ b/app/views/current/views/water/answers-high.html
@@ -60,7 +60,7 @@
           Farm grows crops for food
         </dt>
         <dd class="govuk-summary-list__value">
-          {{ data['farming-type'] | capitalize }}
+          {{ data['summary-farming-type'] | capitalize }}
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="farming-type">
