--- a/app/views/current/views/water/farming-type.html
+++ b/app/views/current/views/water/farming-type.html
@@ -25,18 +25,40 @@
             <div id="farming-type-hint" class="govuk-hint">
               By food industry we mean crops grown for human consumption, not animal feed or biofuel.
             </div>
-            <div class="govuk-radios govuk-radios--inline">
+            <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="farming-type" name="farming-type" type="radio" value="yes" {{ checked("farming-type", "yes") }}>
-                <label class="govuk-label govuk-radios__label" for="farming-type">
+                <input class="govuk-radios__input" id="farming-type-1" name="farming-type" type="radio" value="yes" {{ checked("farming-type", "yes") }}>
+                <label class="govuk-label govuk-radios__label" for="farming-type-1">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="farming-type-2" name="farming-type" type="radio" value="no" {{ checked("farming-type", "no") }}>
+                <input class="govuk-radios__input" id="farming-type-2" name="farming-type" type="radio" value="no" data-aria-controls="conditional-farming-type-2-options" {{ checked("farming-type", "no") }}>
                 <label class="govuk-label govuk-radios__label" for="farming-type-2">
                   No
                 </label>
+              </div>
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-farming-type-2-options">
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="farming-type-other-options-1" name="farming-type-other-options" type="radio" value="growing flowers" {{ checked("farming-type-other-options", "growing flowers") }}>
+                  <label class="govuk-label govuk-radios__label" for="farming-type-other-options-1">
+                    Growing flowers
+                  </label>
+                </div>
+            
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="farming-type-other-options-2" name="farming-type-other-options" type="radio" value="forestry" {{ checked("farming-type-other-options", "forestry") }}>
+                  <label class="govuk-label govuk-radios__label" for="farming-type-other-options-2">
+                    Forestry
+                  </label>
+                </div>
+                
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="farming-type-other-options-3" name="farming-type-other-options" type="radio" value="something else" {{ checked("farming-type-other-options", "something else") }}>
+                  <label class="govuk-label govuk-radios__label" for="farming-type-other-options-3">
+                    Something else
+                  </label>
+                </div>
               </div>
             </div>
           </fieldset>
