--- a/app/views/current/views/water/answers-high.html
+++ b/app/views/current/views/water/answers-high.html
@@ -86,7 +86,7 @@
           Project in England
         </dt>
         <dd class="govuk-summary-list__value">
-          {{ data['country'] | capitalize }}
+          {{ data['summary-country'] | capitalize }}
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="country">
