--- a/app/views/current/views/water/email.html
+++ b/app/views/current/views/water/email.html
@@ -47,7 +47,7 @@
               Project in England
             </dt>
             <dd class="govuk-summary-list__value">
-              {{ data['country'] | capitalize }}
+              {{ data['summary-country'] | capitalize }}
             </dd>
           </div>
           <div class="govuk-summary-list__row">
