--- a/app/views/current/views/water/country.html
+++ b/app/views/current/views/water/country.html
@@ -22,12 +22,20 @@
                 Is the planned project in England?
               </h1>
             </legend>
-            <div class="govuk-radios govuk-radios--inline">
+            <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="country" name="country" type="radio" value="yes" {{ checked("country", "yes") }}>
+                <input class="govuk-radios__input" id="country" name="country" type="radio" value="yes" data-aria-controls="conditional-country-postcode" {{ checked("country", "yes") }}>
                 <label class="govuk-label govuk-radios__label" for="country">
                   Yes
                 </label>
+              </div>
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-country-postcode">
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="conditional-country-postcode">
+                    In which postcode will the project take place?
+                  </label>
+                  <input class="govuk-input govuk-!-width-one-third" id="postcode" name="postcode" type="text" value="{{ data['postcode'] }}" spellcheck="false" {{ checked("postcode", "postcode") }}>
+                </div>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="country-2" name="country" type="radio" value="no" {{ checked("country", "no") }}>
