fix colour /medium fit

--- a/app/views/current/views/water/answers.html
+++ b/app/views/current/views/water/answers.html
@@ -13,7 +13,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
 
-    <div class="govuk-panel govuk-panel--confirmation" style="background: #ffae33">
+    <div class="govuk-panel govuk-panel--confirmation" style="background:	#b1b4b6">
       <h1 class="govuk-panel__title">MEDIUM FIT</h1>
     </div>
 
