--- a/app/views/current/views/water/irrigated-land.html
+++ b/app/views/current/views/water/irrigated-land.html
@@ -27,10 +27,9 @@
         </div>
 
         <div class="govuk-form-group">
-          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="irrigated-land-target">
+          <h2 class="govuk-heading-m">
             How much land will be irrigated per year after the project? 
-            </label>
-          </h1>
+          </h2>
           <div id="irrigated-land-target-hint" class="govuk-hint">
             Enter figure in hectares
           </div>
