--- a/app/views/current/views/water/country.html
+++ b/app/views/current/views/water/country.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Where is the {{ data['country'] }} business located?
+  Where is the business located?
 {% endblock %}
 
 {% block beforeContent %}
