--- a/app/views/current/views/water/abstraction-required-condition.html
+++ b/app/views/current/views/water/abstraction-required-condition.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-You may be able to apply for a large grant from this scheme
+You may be able to apply for a grant from this scheme
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,7 +14,7 @@ You may be able to apply for a large grant from this scheme
   <div class="govuk-grid-column-two-thirds">
 
     <h1 class="govuk-heading-l">
-      You may be able to apply for a large grant from this scheme
+      You may be able to apply for a grant from this scheme
     </h1>
 
     <p>Check if you need an abstraction licence.</p>
