--- a/app/views/current/views/water/country-fail.html
+++ b/app/views/current/views/water/country-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You cannot apply for a large grant from this scheme
+  You cannot apply for a grant from this scheme
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,7 +14,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You cannot apply for a large grant from this scheme
+        You cannot apply for a grant from this scheme
       </h1>
 
       <p>This is only for projects in England.</p>
