--- a/app/views/current/views/water/farming-type-fail.html
+++ b/app/views/current/views/water/farming-type-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You cannot apply for a large grant from this scheme
+  You cannot apply for a grant from this scheme
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,10 +14,10 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You cannot apply for a large grant from this scheme
+        You cannot apply for a grant from this scheme
       </h1>
 
-      <p>This is only available to arable and horticultural farming businesses that supply the food industry.</p>
+      <p>This is only available to arable and horticultural farming businesses that supply the food industry, nurseries growing flowers or forestry nurseries.</p>
 
       <!--See <a href="">the large countryside productivity grant guidance</a> for further information.-->
 
