--- a/app/views/current/views/water/answers-high.html
+++ b/app/views/current/views/water/answers-high.html
@@ -180,106 +180,31 @@
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Planning permission required
+          Planning permission
         </dt>
         <dd class="govuk-summary-list__value">
-          {{ data['planning-required'] | capitalize }}
+          {{ data['planning-permission'] | capitalize }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="planning-required">
+          <a class="govuk-link" href="planning-permission">
             Change<span class="govuk-visually-hidden"> planning permission required</span>
           </a>
         </dd>
       </div>
-      {% if data['planning-required'] == "yes" %}
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Planning permission obtained
-        </dt>
-        <dd class="govuk-summary-list__value">
-          <p class="govuk-body">{{ data['planning-permission'] | capitalize }}</p>
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="planning-permission">
-            Change<span class="govuk-visually-hidden"> planning permission obtained</span>
-          </a>
-        </dd>
-      </div>
-      {% endif %}
-      {% if data['planning-permission'] == "no" %}
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Planning permission to be granted in next six months
-        </dt>
-        <dd class="govuk-summary-list__value">
-          <p class="govuk-body">{{ data['planning-progress'] | capitalize }}</p>
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="planning-progress">
-            Change<span class="govuk-visually-hidden"> planning permission to be granted in next six months</span>
-          </a>
-        </dd>
-      </div>
-      {% endif %}
 
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Abstraction licence required
+          Abstraction licence
         </dt>
         <dd class="govuk-summary-list__value">
-          {{ data['abstraction-required'] | capitalize }}
+          {{ data['abstraction-licence'] | capitalize }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="abstraction-required">
+          <a class="govuk-link" href="abstraction-licence">
             Change<span class="govuk-visually-hidden"> abstraction licence required</span>
           </a>
         </dd>
       </div>
-      {% if data['abstraction-required'] == "yes" %}
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Abstraction licence obtained
-        </dt>
-        <dd class="govuk-summary-list__value">
-          <p class="govuk-body">{{ data['abstraction-licence'] | capitalize }}</p>
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="abstraction-licence">
-            Change<span class="govuk-visually-hidden"> abstraction licence obtained</span>
-          </a>
-        </dd>
-      </div>
-      {% endif %}
-      {% if data['abstraction-licence'] == "no" %}
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Abstraction licence to be granted in next six months
-        </dt>
-        <dd class="govuk-summary-list__value">
-          <p class="govuk-body">{{ data['abstraction-progress'] | capitalize }}</p>
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="abstraction-licence">
-            Change<span class="govuk-visually-hidden"> abstraction licence to be granted in next six months</span>
-          </a>
-        </dd>
-      </div>
-      {% endif %}
-      {% if (data['abstraction-required'] == "yes") and (data['abstraction-licence'] == "yes") %}
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Abstraction variation required
-        </dt>
-        <dd class="govuk-summary-list__value">
-          <p class="govuk-body">{{ data['abstraction-variation'] | capitalize }}</p>
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="abstraction-variation">
-            Change<span class="govuk-visually-hidden"> abstraction variation required</span>
-          </a>
-        </dd>
-      </div>
-      {% endif %}
     </dl>
 
     {% if (data['tenancy'] == "yes") and (data['tenancy-length'] == "no") %}
@@ -287,7 +212,7 @@
         You will need to extend your tenancy beyond 2026 before you make a full application.
     </div>
     {% endif %}
-
+<!--
     {% if data['planning-required'] == "not sure" %}
     <div class="govuk-inset-text">
         You will need to check if you need planning permission and secure it before you make a full application.
@@ -317,7 +242,7 @@
         You will need to secure a variation to your abstraction licence before you make a full application.
     </div>
     {% endif %}
-
+  -->
     <h2 class="govuk-heading-m govuk-!-margin-top-9">Project details and benefits</h2>
 
     <dl class="govuk-summary-list">
