revert /irrigated-land headings

--- a/app/views/current/views/water/irrigated-land.html
+++ b/app/views/current/views/water/irrigated-land.html
@@ -27,9 +27,10 @@
         </div>
 
         <div class="govuk-form-group">
-          <h2 class="govuk-heading-m">
-            How much land will be irrigated per year after the project? 
-          </h2>
+          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="irrigated-land-current">
+            How much land will be irrigated per year after the project?
+            </label>
+          </h1>
           <div id="irrigated-land-target-hint" class="govuk-hint">
             Enter figure in hectares
           </div>
