--- a/app/views/current/views/water/tenancy-length.html
+++ b/app/views/current/views/water/tenancy-length.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="../water/tenancy-length-answer" method="post">
+      <form id="mainForm" class="form" action="../water/tenancy-length-answer" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
@@ -39,7 +39,16 @@
           </fieldset>
         </div>
 
-        <button class="govuk-button" data-module="govuk-button">Continue</button>
+        <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+
+        {% if data['COMPLETED'] == true %}
+          <button onclick="document.getElementById('mainForm').action='tenancy-length-answer-completed'"
+            class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
+          >
+            Back to summary page
+          </button>
+        {% endif %}
+
 
       </form>
 
