--- a/app/views/current/views/water/grant.html
+++ b/app/views/current/views/water/grant.html
@@ -24,9 +24,18 @@ Potential grant funding
       The project is not guaranteed to receive a grant.
     </div>
 
-    <form class="form" action="{{ nextUrl }}" method="post">
+    <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-      <button class="govuk-button" data-module="govuk-button">Continue</button>
+      <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+
+      {% if data['COMPLETED'] == true %}
+      <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+        class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
+      >
+        Back to summary page
+      </button>
+    {% endif %}
+
 
     </form>
 
