add summary button to /project-start

--- a/app/views/current/views/water/project-start.html
+++ b/app/views/current/views/water/project-start.html
@@ -5,7 +5,7 @@ Have you already started work on the project?
 {% endblock %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="public-money">Back</a>
+<a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@ Have you already started work on the project?
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form class="form" action="{{ nextUrl }}" method="post">
+    <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
@@ -56,7 +56,15 @@ Have you already started work on the project?
         </div>
       </details>
 
-      <button class="govuk-button" data-module="govuk-button">Continue</button>
+      <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+
+      {% if data['COMPLETED'] == true %}
+        <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+          class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
+        >
+          Back to summary page
+        </button>
+      {% endif %}
 
     </form>
 
