--- a/app/views/current/views/water/farming-type.html
+++ b/app/views/current/views/water/farming-type.html
@@ -19,12 +19,9 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Does the farm grow crops to supply the food industry?
+                What crops are you growing?
               </h1>
             </legend>
-            <div id="farming-type-hint" class="govuk-hint">
-              By food industry we mean crops grown for human consumption, not animal feed or biofuel.
-            </div>
             <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="farming-type-1" name="farming-type" type="radio" value="yes" {{ checked("farming-type", "yes") }}>
