Water-Irrigate/changed the high fit radiosButton

--- a/app/views/current/views/water/answers-high.html
+++ b/app/views/current/views/water/answers-high.html
@@ -294,15 +294,11 @@
           Irrigated crops
         </dt>
         <dd class="govuk-summary-list__value">
-          <ul class="govuk-list govuk-list--bullet">
-            {% for item in data['irrigated-crops'] %}
-              <li>{{ item | capitalize }}</li>
-            {% endfor %}
-          </ul>
+          {{ data['irrigated-crops'] | capitalize }}
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="irrigated-crops">
-            Change<span class="govuk-visually-hidden"> irrigated crops</span>
+            Change<span class="govuk-visually-hidden">irrigated crops</span>
           </a>
         </dd>
       </div>
