water-irrigation-source added new checkbox

--- a/app/views/current/views/water/irrigation-water-source.html
+++ b/app/views/current/views/water/irrigation-water-source.html
@@ -36,21 +36,27 @@
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-current-3" name="irrigation-current" type="checkbox" value="Surface abstraction" {{ checked("irrigation-current", "Surface abstraction") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-current-3" name="irrigation-current" type="checkbox" value="Rain water" {{ checked("irrigation-current", "Rain water") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-3">
-                  Summer water surface abstraction
+                  Rain water harvesting
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-current-4" name="irrigation-current" type="checkbox" value="Rain water" {{ checked("irrigation-current", "Rain water") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-current-4" name="irrigation-current" type="checkbox" value="Surface abstraction" {{ checked("irrigation-current", "Surface abstraction") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-4">
-                  Rain water harvesting
+                  Summer water surface abstraction
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="irrigation-current-5" name="irrigation-current" type="checkbox" value="mains" {{ checked("irrigation-current", "mains") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-5">
                   Mains
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-current-6" name="irrigation-current" type="checkbox" value="Not currently irrigating" {{ checked("irrigation-current", "Not currently irrigating") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-6">
+                  Not currently irrigating
                 </label>
               </div>
             </div>
@@ -84,14 +90,8 @@
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-target-4" name="irrigation-target" type="checkbox" value="Rain water" {{ checked("irrigation-target", "Rain water") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-target-4" name="irrigation-target" type="checkbox" value="mains" {{ checked("irrigation-target", "mains") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-4">
-                  Rain water harvesting
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-target-5" name="irrigation-target" type="checkbox" value="mains" {{ checked("irrigation-target", "mains") }}>
-                <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-5">
                   Mains
                 </label>
               </div>
