added new check box for first question

--- a/app/views/current/views/water/irrigation-systems.html
+++ b/app/views/current/views/water/irrigation-systems.html
@@ -42,15 +42,21 @@
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-current-4" name="irrigation-systems-current" type="checkbox" value="Sprinklers" {{ checked("irrigation-systems-current", "Sprinklers") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-systems-current-4" name="irrigation-systems-current" type="checkbox" value="Sprinklers or mist" {{ checked("irrigation-systems-current", "Sprinklers or mist") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-4">
-                  Sprinklers
+                  Sprinklers or mist
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="irrigation-systems-current-5" name="irrigation-systems-current" type="checkbox" value="Rain gun" {{ checked("irrigation-systems-current", "Rain gun") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-5">
                   Rain gun
+                </label>
+              </div>
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-systems-current-6" name="irrigation-systems-current" type="checkbox" value="Not currently irrigating" {{ checked("irrigation-systems-current", "Not currently irrigating") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-6">
+                  Not currently irrigating
                 </label>
               </div>
             </div>
@@ -84,9 +90,9 @@
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-target-4" name="irrigation-systems-target" type="checkbox" value="Sprinklers" {{ checked("irrigation-systems-target", "Sprinklers") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-systems-target-4" name="irrigation-systems-target" type="checkbox" value="Sprinklers or mist" {{ checked("irrigation-systems-target", "Sprinklers or mist") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-4">
-                  Sprinklers
+                  Sprinklers or mist
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
